[package]
name = "ex24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "p1"
path = "src/p1.rs"

[[bin]]
name = "p2"
path = "src/p2.rs"

[dependencies]
itertools = "0.12.0"
rational = "1.5.0"
regex = "1.10.2"
z3 = {version = "0.12", features = ["static-link-z3"]}

